tests/invalid_programs/undeclared_var.con
mod Simple {
    fn main() -> i32 {
        b = 2;
        return 0;
    }
}
